--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,20 +3,28 @@ version: '3.8'
 services:
   app:
     build: .
+    container_name: fastapi
     ports:
-      - "8000:80"  # Asegúrate que FastAPI escuche en el puerto 80, o cambia a 8000
+      - "8000:80"  # Asegúrate que FastAPI escuche en el puerto 80, o cambia a 8000 si es necesario
     volumes:
       - .:/app
     environment:
       - MODULE_NAME=main
-    command: uvicorn main:app --host 0.0.0.0 --port 80  # O ajusta el puerto según tu configuración
+    command: uvicorn main:app --host 0.0.0.0 --port 80
+    networks:
+      - fastapi-network  # Conectar a la red personalizada
 
   ngrok:
     image: wernight/ngrok
     container_name: ngrok
     environment:
-      - NGROK_AUTHTOKEN=${NGROK_AUTHTOKEN}  # Reemplazar por variable de entorno para mayor seguridad
-      - NGROK_PORT=8000
+      - NGROK_AUTHTOKEN=${NGROK_AUTHTOKEN}
     ports:
       - "4040:4040"  # Dashboard de ngrok
-    command: "ngrok http 0.0.0.0:8000"  # Cambiar al puerto 8000 de la aplicación FastAPI si es necesario
+    command: "ngrok http fastapi:80"  # Apunta al contenedor 'app' en el puerto 80
+    networks:
+      - fastapi-network  # Conectar a la misma red personalizada
+
+networks:
+  fastapi-network:  # Definir la red personalizada
+    driver: bridge  # La red "bridge" es la predeterminada en Docker, útil para contenedores en la misma máquina
