--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-speechrecognition
-pydub
-langdetect
-twilio
-python-dotenv
+speechrecognition~=3.11.0
+pydub~=0.25.1
+langdetect~=1.0.9
+twilio~=9.3.7
+python-dotenv~=1.0.1
 pydantic
 ffmpeg-python
-fastapi
+fastapi~=0.112.2
 uvicorn
+aiohttp~=3.10.5
+requests~=2.31.0
+python-multipart~=0.0.17
